redactable/tests/ui/sensitive_display_dual_without_sensitive_rejected.stderr
error: `#[sensitive(dual)]` is no longer accepted on `Sensitive` or `SensitiveDisplay`; use `#[derive(SensitiveDual)]` instead
  --> tests/ui/sensitive_display_dual_without_sensitive_rejected.rs:11:8
   |
11 | struct ApiKey(#[sensitive(redactable::Token)] String);
   |        ^^^^^^
